# cp3_project---Face-detection-and-filters

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: baseFilter.h  carousel.h  carouselWidget.h  centralWidget.h  faceFilter.h  filterSet.h  fistFilter.h  mainWindow.h  updateLabelInterface.h
src/: baseFilter.cpp  carousel.cpp  centralWidget.cpp  faceFilter.cpp  filterSet.cpp  fistFilter.cpp  main.cpp  mainWindow.cpp
